# web_server_load

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.en.md  README.md  REPORT.md  docker-compose.yml  main.py  pyproject.toml
.opencode/agents/: commiteer.md  scout.md
docs/: ARCHITECTURE.md  ARHITEKTURA.md  IZVJESTAJ.md  REPORT.md
src/analysis/: __init__.py  _plot.py  _types.py  analyzers.py  characterizer.py  empirical.py
src/cli/: __init__.py  cli.py  commands.py
src/experiment/: __init__.py  _analysis.py  _config.py  _plot.py  _replication.py  orchestrator.py
src/ingestion/: __init__.py  ingestor.py
src/simulation/: __init__.py  _config.py  _types.py  engine.py  generators.py
src/traffic/: __init__.py  _plot.py  _types.py  analyzers.py  characterizer.py  empirical.py
