[project]
name = "web-server-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "simpy>=4.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
]
