[project]
name = "web-server-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scipy>=1.18.0",
    "simpy>=4.1.2",
]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
]
